--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,9 @@
   @apply w-full items-center flex justify-start
 }
 
+.flexCenter {
+  @apply w-full items-center flex justify-center
+}
 
 .swiper-button-prev:after {
   left: calc(32%)
