--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -1,3 +1,12 @@
+.glitch {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
+        -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
+        0.025em 0.05em 0 rgba(0, 0, 255, 0.75);
+    -webkit-animation: glitch 1s infinite;
+    animation: glitch 1s infinite;
+    position: relative;
+}
+
 @keyframes slideRight {
     0% {
         transform: translateX(-100%);
